Update ci.yml (forgot to add artifact for csv download)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,3 +27,9 @@ jobs:
       - name: Collect test results
         run: |
           python collect_data.py
+
+      - name: Upload data.csv as artifact #added artifcat to download csv
+        uses: actions/upload-artifact@v3
+        with:
+          name: data.csv
+          path: data.csv
