--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,7 +28,7 @@ jobs:
         run: |
           python collect_data.py
 
-      - name: Upload data.csv as artifact #added artifcat to download csv
+      - name: Upload data.csv as artifact
         uses: actions/upload-artifact@v4
         with:
           name: data.csv
